# Team_Reduction

./: .gitignore  README.md  ReductionApp.spec  abbreviation_database.py  abbreviation_extraction_stage2.py  abbreviation_list_inserter.py  abbreviation_need_stage3.py  curator_launcher.py  declaration_validator.py  main.py  product_logger.py  pyproject.toml  requirements.txt  test_reduction_input.docx  text_recognition_candidates_v2.py  text_recognition_candidates_v3.py  Инструкция.txt
abbreviation_database/: abbreviation_database.json
result_stage1/: aggregated_candidates.csv  aggregated_candidates.xlsx  raw_mentions.csv  raw_mentions.xlsx
result_stage1_v2/: aggregated_candidates.csv  aggregated_candidates.xlsx  raw_mentions.csv  raw_mentions.xlsx
result_stage1_v3/: aggregated_candidates.csv  aggregated_candidates.xlsx  raw_mentions.csv  raw_mentions.xlsx
result_stage2/: document_fragments.csv  document_fragments.xlsx  existing_abbreviations.csv  existing_abbreviations.xlsx  merged_terms_and_abbreviations.xlsx  reducible_terms.xlsx
result_stage3/: abbreviation_decisions.csv  abbreviation_decisions.xlsx  abbreviation_recommendations.csv  abbreviation_recommendations.xlsx  existing_abbreviations.xlsx  merged_terms_and_abbreviations.csv  merged_terms_and_abbreviations.xlsx
result_stage3/stage2_intermediate/: document_fragments.xlsx  reducible_terms.csv  reducible_terms.xlsx
ТЕСТ ДЛЯ КУРАТОРА/: test_reduction_input.docx  Описание выходных файлов.xlsx
ТЕСТ ДЛЯ КУРАТОРА/ReductionApp/_internal/numpy-2.4.4.dist-info/: RECORD
(+2 files in other folders)
